FIxed bug where annotations are hidden under the annotation spacer.

--- a/Yuras/webapp/public/assets/css/viewer.css
+++ b/Yuras/webapp/public/assets/css/viewer.css
@@ -88,7 +88,6 @@ body {
 }
 
 .annotation-page {
-	height: 95%;
 	margin-bottom: 2%;
 	width: 100%;
 	overflow: hidden;
